# soundcloudcpp

./: .gitignore  .gitmodules  LICENSE  README.md
src/: .ycm_extra_conf.py  CMakeLists.txt  build.sh  client.cc  o.js
src/audacious/: CMakeLists.txt
src/audacious/plugin/: CMakeLists.txt  plugin_entry.c  soundcloud_widget.cc  soundcloud_widget.h
src/audacious/plugin/old_c/: plugin.cc  plugin.h
src/boostfree/: curl_client_test.cc  requestCurl.cc  requestCurl.h
src/client/: client.cc  client_test.cc  query.h
src/demo/: CMakeLists.txt  log.cc  log.h  main.cc  main_window.cc  main_window.h  player.cc  player.h
src/lib/: CMakeLists.txt  auth.cc  auth.h  client.cc  client.h  client_test.cc  query.cc  query.h  tracks_request.cc
src/lib/client/: CMakeLists.txt  client.cc  client.h  client_test.cc  query.cc  tracks_request.cc  tracks_request.h
src/lib/network/: CMakeLists.txt  requestCurl.cc  requestCurl.h
src/lib/parser/: CMakeLists.txt  parser.cc  parser.h  tracksparser_test.cc
src/lib/support/: CMakeLists.txt
src/lib/types/: track.h  user.h
src/network/: curl_client_test.cc
src/parser/: CMakeLists.txt  parser.cc  parser.h  trackparser.h  tracksparser_test.cc
src/parsers/: trackparser.h  tracksparser_test.cc
src/support/: CMakeLists.txt
src/test/data/: o.js
src/types/: track.h
